--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:text="@string/select_vault_or_create_import_a_new_one"
+        android:textAlignment="center"
         android:textColor="@color/red_1"
         android:textSize="16sp"
         android:textStyle="bold"
