--- a/app/src/main/res/layout/activity_vault.xml
+++ b/app/src/main/res/layout/activity_vault.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnExport"
+        app:layout_constraintBottom_toTopOf="@+id/btnShowMnemonic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDeleteVault"
@@ -41,52 +41,25 @@
         android:text="@string/show_mnemonic"
         app:icon="@drawable/baseline_app_shortcut_24"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnSyncFrom"
+        app:layout_constraintEnd_toStartOf="@+id/btnSyncExport"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintWidth_max="320dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnSyncFrom"
+        android:id="@+id/btnSyncExport"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/sync_from"
-        app:icon="@drawable/baseline_arrow_downward_24"
+        android:text="@string/sync_export_btn"
+        app:icon="@drawable/baseline_sync_alt_24"
         app:layout_constraintBottom_toBottomOf="@+id/btnShowMnemonic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btnShowMnemonic"
         app:layout_constraintTop_toTopOf="@+id/btnShowMnemonic"
         app:layout_constraintWidth_max="320dp" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnSyncTo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/sync_to"
-        app:icon="@drawable/baseline_arrow_upward_24"
-        app:layout_constraintBottom_toBottomOf="@+id/btnDeleteDevice"
-        app:layout_constraintEnd_toEndOf="@+id/btnSyncFrom"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btnDeleteDevice"
-        app:layout_constraintTop_toTopOf="@+id/btnDeleteDevice" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnDeleteDevice"
-        android:layout_width="48dp"
-        android:layout_height="0dp"
-        app:icon="@drawable/baseline_delete_24"
-        app:iconGravity="textTop"
-        app:iconPadding="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnExport"
-        app:layout_constraintEnd_toStartOf="@+id/btnSyncTo"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="@+id/btnSyncFrom"
-        app:layout_constraintTop_toTopOf="@+id/btnExport" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAddEntry"
@@ -101,18 +74,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/entries"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/baseline_add_24" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnExport"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/export"
-        app:icon="@drawable/baseline_arrow_upward_24"
-        app:layout_constraintBottom_toTopOf="@+id/btnShowMnemonic"
-        app:layout_constraintEnd_toEndOf="@+id/btnShowMnemonic"
-        app:layout_constraintStart_toStartOf="@+id/btnShowMnemonic"
-        app:layout_constraintWidth_max="320dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnRenameVault"
